# md-native-qq

./: .gitignore  .npmignore  LICENSE  MdNativeQQ.podspec  README.md  nitro.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.github/workflows/: release.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/libs/: PLACE_SDK_HERE.md
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/mangdin/mdnativeqq/: MdNativeQQActivityBridge.kt  MdNativeQQFileProvider.kt  MdNativeQQModule.kt  MdNativeQQPackage.kt
android/src/main/java/com/margelo/nitro/mdnativeqq/: HybridMdNativeQQ.kt  MdNativeQQActivityBridge.kt  MdNativeQQPackage.kt
android/src/main/res/xml/: md_native_qq_file_paths.xml
ios/: HybridMdNativeQQ.swift  MdNativeQQ-Bridging-Header.h  MdNativeQQ.h  MdNativeQQ.mm  MdNativeQQURLHandler.h  MdNativeQQURLHandler.m  PLACE_SDK_HERE.md
ios/TencentOpenAPI.xcframework/: Info.plist
ios/TencentOpenAPI.xcframework/ios-arm64/TencentOpenAPI.framework/: TencentOpenAPI
ios/TencentOpenAPI.xcframework/ios-x86_64-simulator/TencentOpenAPI.framework/: TencentOpenAPI
ios/TencentOpenApi_IOS_Bundle.bundle/: Info.plist
src/: NativeMdNativeQQ.ts  index.ts  notification.ts  types.ts  utils.ts
src/specs/: MdNativeQQ.nitro.ts
